<resources>
    <string name="app_name">LVB信封理財王</string>
    <!--AccountDetailFragment-->
    <string name="cost_cant_be_void">花費不能為空</string>
    <string name="save">儲存</string>
    <string name="edit">編輯</string>
    <string name="envelop_name">信封名稱 </string>
    <string name="comment_name">花費名稱 </string>
    <string name="cost_number">花費金額 </string>
    <string name="date">日期 </string>
    <string name="photo">照片 </string>
    <string name="envelop">信封袋 </string>
    <string name="account">帳務 </string>
    <string name="information">資訊 </string>
    <string name="history">歷史資料</string>
    <string name="history_account">歷史帳務</string>
    <!--AccountListFragment-->

    <!--EnvelopeListFragment-->

    <string name="new_envelop">新增信封</string>
    <string name="new_account">新增帳務</string>
    <string name="envelop_max">信封上限</string>
    <string name="envelop_rest">信封剩餘</string>
    <string name="envelop_cost">信封花費</string>
    <string name="cost">花費</string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>
    <string name="set_value">設定數值</string>
    <string name="check_accounts">檢視帳務</string>
    <string name="delete">刪除</string>
    <string name="set_envelop">設定信封資料</string>

    <string name="month_budget">本月預算</string>
    <string name="month_cost">本月花費</string>
    <string name="today_cost">本日花費</string>
    <string name="month_surplus">本月剩餘</string>
    <string name="create_excel">建立Excel存擋</string>
    <string name="read_excel">從Excel讀檔</string>
    <string name="upload_to_one_drive">上傳至OneDrive</string>
    <string name="download_from_one_drive">從OneDrive下載</string>
    <string name="complete">完成</string>
    <string name="fail">失敗</string>
    <string name="bill">月結</string>
    <string name="bill_content">\t\t月結將會清除所有信封袋裡的帳務</string>
    <string name="month_save_money">此月節省花費</string>
</resources>
